# video-manager

./: .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/: main.py  swagger.py
src/auth/: exceptions.py  permissions.py  routers.py  schemas.py  serivce.py  token.py
src/core/: config.py  exceptions.py
src/core/celery/: app.py
src/core/celery/crons/: schedule.py
src/core/celery/tasks/: organization.py  video.py
src/db/: __init__.py  base.py  session.py  sync_session.py
src/db/migrations/: env.py
src/db/migrations/versions/: 193a82daf1a4_create_user_organization_video_tables.py  6c27c4b17ebc_add_default_plans.py
src/organization/: exceptions.py  models.py  repository.py  routers.py  schemas.py  service.py
src/tests/: test_video.py
src/user/: exceptions.py  models.py  repository.py  routers.py  schemas.py  service.py
src/video/: exceptions.py  models.py  repository.py  routers.py  scehmas.py  service.py  utils.py
